[tool.poetry]
name = "portefaix-hub"
version = "0.1.0"
description = ""
authors = ["Nicolas Lamirault <nicolas.lamirault@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pre-commit = "^2.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
